# confjector

./: LICENSE  README.md  requirements.txt  setup.cfg
confjector/: __init__.py  injector.py  parser.py
examples/: example.py
examples/conf/: config.yml
tests/: test_injector.py
