[metadata]
name = confjector
version = 0.1.0
description = Simple configuration parser and injector.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/pyupgrade
author = Pavel Paranin
author_email = pave@paran.in
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pydantic>=1.8.2
    PyYAML>=6.0
python_requires = >=3.10.1

[options.packages.find]
exclude =
    tests*
    examples*